Working css. Structure in place

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,8 @@
-<footer class="page-footer">
-  <div class="footer-wrapper">
-    <h2 class="footer-heading">Footer-heading</h2>
+<footer>
+  <div class="page-footer">
+    <a href="https://dkarkiver.dk">ODA</a>
+    <a href="/privacy-policy">Databeskyttelse</a>
+    <a href="https://www.was.digst.dk/byraadsarkivet-aarhus-dk">Tilgængelighedserklæring &#129109;</a>
+    <a href="https://github.com/aarhusstadsarkiv/smartarkivering"><span class="icon icon--github">{% include icon-github.svg %}</span></a>
   </div>
 </footer>
