--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "da" }}">
+<html lang="da">
 
   {%- include head.html -%}
 
@@ -7,8 +7,12 @@
 
     {%- include header.html -%}
 
-    <main class="page-body" aria-label="Content">
-      <div class="wrapper">
+    <main aria-label="Content">
+      <div class="page-content">
+        {%- if page.title -%}
+          <h1 class="page-heading">{{ page.title }}</h1>
+        {%- endif -%}
+
         {{ content }}
       </div>
     </main>
