--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="page-footer">
     <a href="https://dkarkiver.dk">ODA</a>
-    <a href="/privacy-policy">Databeskyttelse</a>
+    <a href="{{site.github.url}}/privacy-policy">Databeskyttelse</a>
     <a href="https://www.was.digst.dk/byraadsarkivet-aarhus-dk">Tilgængelighedserklæring &#129109;</a>
     <a href="https://github.com/aarhusstadsarkiv/smartarkivering"><span class="icon icon--github">{% include icon-github.svg %}</span></a>
   </div>
