--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
         <span class="hamburger-close">&#10005;</span>
       </label>
       <ul class="menu">
-        <li><a href="/deposit">Afléver filer</a></li>
-        <li><a href="/archives">Deltagere</a> </li>
-        <li><a href="/about">Om</a></li>
+        <li><a href="{{site.github.url}}/deposit">Afléver filer</a></li>
+        <li><a href="{{site.github.url}}/archives">Deltagere</a> </li>
+        <li><a href="{{site.github.url}}/about">Om</a></li>
       </ul>
     </div>
   </div>
