Add robots.txt; minor changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header role="banner">
   <div class="page-header">
     <div class="logo-wrapper">
-      <h2 id="logo"><a href="/">Smartarkivering</a></h2>
+      <h2 id="logo">
+        <a href="{{site.github.url}}/" aria-label="Gå til forsiden">Smartarkivering</a>
+      </h2>
     </div>
     <div class="navigation">
       <input type="checkbox" id="menu-toggle"/>
@@ -12,7 +14,7 @@
       <ul class="menu">
         <li><a href="{{site.github.url}}/deposit">Afléver filer</a></li>
         <li><a href="{{site.github.url}}/archives">Deltagere</a> </li>
-        <li><a href="{{site.github.url}}/about">Om</a></li>
+        <li><a href="{{site.github.url}}/about" aria-label="Alt om projektet">Om</a></li>
       </ul>
     </div>
   </div>
