--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,11 @@
 <footer>
   <div class="page-footer">
-    <a href="https://dkarkiver.dk">ODA</a>
+    <a href="https://dkarkiver.dk" aria-label="Organisationen Danske Arkivers hjemmeside">ODA</a>
     <a href="{{site.github.url}}/privacy-policy">Databeskyttelse</a>
-    <a href="https://www.was.digst.dk/byraadsarkivet-aarhus-dk">Tilgængelighedserklæring &#129109;</a>
-    <a href="https://github.com/aarhusstadsarkiv/smartarkivering"><span class="icon icon--github">{% include icon-github.svg %}</span></a>
+    <span>
+      <a href="https://www.was.digst.dk/byraadsarkivet-aarhus-dk">Tilgængelighedserklæring</a>
+      <span> &#129109;</span>
+    </span>
+    <a href="https://github.com/aarhusstadsarkiv/smartarkivering" aria-label="Hjemmesidens kildekode">{% include icon-github.svg %}</a>
   </div>
 </footer>
