--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <head>
-  <title>Smartarkivering</title>
+  <title>{{ site.title }}{% if page.title %} | {{ page.title }} {% endif %}</title>
   <meta charset="utf-8">
+  <meta name="description" content="Afléver dine digitale filer til et offentligt arkiv">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href="{{ "assets/main.css" | relative_url }}"> -->
   <link rel="stylesheet" href="{{ site.github.url }}/assets/main.css">
 </head>
