--- a/assets/main.css
+++ b/assets/main.css
@@ -50,6 +50,9 @@ header {
     color: #fff;
     background-color: rgb(5, 80, 116);
 }
+header a:hover {
+    text-decoration: none;
+}
 footer {
     background-color: lightgray;
     font-size: .9em;
