--- a/assets/main.css
+++ b/assets/main.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
 }
 a {
+    color: rgb(0, 102, 204);
     text-decoration: none;
 }
 a:visited {
@@ -54,7 +55,7 @@ header a:hover {
     text-decoration: none;
 }
 footer {
-    background-color: lightgray;
+    background-color: #efefef;
     font-size: .9em;
 }
 .page-header, .page-footer {
@@ -64,8 +65,11 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
-
+/* .page-footer {
+    flex-wrap: wrap;
+} */
 /* Header */
 #logo {
     font-weight: 400;
@@ -105,6 +109,7 @@ footer {
 
 /* APPLYING MEDIA QUERIES */
 @media (max-width: 640px) {
+    /* header */
     .hamburger {
         cursor: pointer;
         display: block;
@@ -126,7 +131,8 @@ footer {
         gap: 0;
     }
     .menu li {
-        padding: .5em 0;
+        /* padding: .5em 0; */
+        padding: 0;
     }
     .menu li:hover {
         display: block;
@@ -139,7 +145,6 @@ footer {
     #menu-toggle:checked ~ .menu {
         display: block;
         padding-top: .5em;
-        /* box-shadow: 1px 1px 5px 0px #265797; */
     }
     #menu-toggle:checked ~ .hamburger .hamburger-open {
         display: none;
@@ -147,7 +152,17 @@ footer {
     #menu-toggle:checked ~ .hamburger .hamburger-close {
         display: inline-block;
     }
-    /* #menu-toggle:checked ~ .hamburger::before {
-        content: \2613;
-    } */
+    /* footer */
+    .page-footer,
+    .page-footer a {
+        display: block;
+    }
+}
+
+/* https://web.dev/accessible-tap-targets/ */
+@media (any-pointer: coarse) {
+    a {
+        padding-top: .8em;
+        padding-bottom: .8em;
+    }
 }
