--- a/assets/main.css
+++ b/assets/main.css
@@ -43,7 +43,7 @@ main {
     margin: 0 auto;
 }
 header, footer {
-    padding: 1em;
+    padding: .5em 1em;
     flex-grow: 0;
     flex-shrink: 0;
 }
@@ -71,9 +71,12 @@ footer {
     flex-wrap: wrap;
 } */
 /* Header */
-#logo {
+h1#logo {
     font-weight: 400;
     font-size: 1.8em;
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
 .page-header a {
     color: #fff;
@@ -165,4 +168,18 @@ footer {
         padding-top: .8em;
         padding-bottom: .8em;
     }
+}
+
+h1 {
+    font-weight: normal;
+    padding-bottom: .2em;
+    padding-top: .15em;
+    border-bottom: 1px solid #9e9a9a;
+    margin-bottom: .3em;
+}
+h2 {
+    font-weight: normal;
+    padding-bottom: .15em;
+    padding-top: .2em;
+    margin-bottom: .25em;
 }
