--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,6 @@
   <meta name="description" content="Afléver dine digitale filer til et offentligt arkiv">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ site.github.url }}/assets/main.css">
+  <!-- <link rel="stylesheet" href="{{ site.github.url }}/assets/main.css"> -->
+  <link rel="stylesheet" href="/assets/main.css">
 </head>
