Remove last absolute url from refs to internal pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,7 @@
 <footer>
   <div class="page-footer">
     <a href="https://dkarkiver.dk">Organisationen Danske Arkiver</a>
-    <a href="{{site.github.url}}/privacy-policy">Databeskyttelse</a>
-    <span>
-      <a href="https://www.was.digst.dk/byraadsarkivet-aarhus-dk"">Tilgængelighedserklæring <span aria-hidden="true">&#129109;</span></a>
-    </span>
+    <a href="/privacy-policy">Databeskyttelse</a>
+    <!-- <a href="https://www.was.digst.dk/byraadsarkivet-aarhus-dk"">Tilgængelighedserklæring</a> -->
   </div>
 </footer>
