--- a/assets/aar.css
+++ b/assets/aar.css
@@ -1,3 +1,7 @@
+/*
+* Used for testing if external files can be js-loaded to the form-pages.
+* Does not look promising.
+*/
 body.archive-aar .button--primary {
   background-color: red !important;
 }
