--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer>
   <div class="page-footer">
     <a href="https://dkarkiver.dk">Organisationen Danske Arkiver</a>
+    <a href="/contact">Kontakt os</a>
     <a href="/privacy-policy">Databeskyttelse</a>
     <!-- <a href="https://www.was.digst.dk/byraadsarkivet-aarhus-dk"">Tilgængelighedserklæring</a> -->
   </div>
