--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
       </label>
       <ul class="menu">
         <li><a href="{{site.github.url}}/deposit">Afléver filer</a></li>
-        <li><a href="{{site.github.url}}/archives">Deltagere</a> </li>
+        <!-- <li><a href="{{site.github.url}}/archives">Deltagere</a> </li> -->
         <li><a href="{{site.github.url}}/about" aria-label="Alt om projektet">Om</a></li>
       </ul>
     </div>
