Removed the page listing the archives

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
         <span class="hamburger-close">&#10005;</span>
       </label>
       <ul class="menu">
-        <li><a href="{{site.github.url}}/deposit">Afléver filer</a></li>
+        <!-- <li><a href="{{site.github.url}}/deposit">Afléver filer</a></li> -->
         <!-- <li><a href="{{site.github.url}}/archives">Deltagere</a> </li> -->
         <li><a href="{{site.github.url}}/about" aria-label="Alt om projektet">Om</a></li>
       </ul>
