--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/assets/main.css">
+  <!-- Privacy-friendly analytics by Plausible -->
+  <script async src="https://analytics.aarhusstadsarkiv.dk/js/pa-CNefCz2GeNOVE1EUeKP6w.js"></script>
+  <script>
+    window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+    plausible.init()
+  </script>
 </head>
